--- a/.github/workflows/tcsworkflow.yml
+++ b/.github/workflows/tcsworkflow.yml
@@ -18,10 +18,10 @@ jobs:
   - name: cppcheck
     run: "cd Unity_TCS/examples/T1; make cppcheck"
   - name: make
-    run: "cd app; make"
+    run: "cd Unity_TCS/examples/T1; make"
   - name: cov
-    run: "cd app; make cov"
+    run: "cd Unity_TCS/examples/T1; make cov"
   - name: valgrind
-    run: "cd app; make valgrind"
+    run: "cd Unity_TCS/examples/T1; make valgrind"
   - name: sanitizer
-    run: "cd app; make sanitizer"
+    run: "cd Unity_TCS/examples/T1; make sanitizer"
